--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "react-loader-spinner": "^6.1.6",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.1.1",
-    "react-toastify": "^11.0.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "useriee": "file:",
+    "yup": "^1.6.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
